--- a/Stephen/index.html
+++ b/Stephen/index.html
@@ -11,6 +11,7 @@
 <body>
     <main id="main">
         <div class="container">
+        <img src="./assets/images/2.jpg" alt="background" id="background">
             <h1 id="recent">Data Analytics Registration Page</h1>
             <div class="">
                 <a href="#"><button id="register" type="button">Register Here</button></a>
